# pythonparts

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  com_prop.py  config.py  pyproject.toml  pythonparts.code-workspace  requirements.txt  setup.py
.eggs/atomicwrites-1.4.1-py3.8.egg/EGG-INFO/: RECORD
controller/: factory.py  factory.pyi  helper.py
docs/: _build.rar  api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/_build/doctrees/: environment.pickle  (+1 more)
docs/download/: WSJ_PP.pyp  wsj_pp.py
docs/source/: conf.py  index.rst  usage.rst
docs/usage/: ex3.md  getting-started.rst  installation.rst
experiments/: general.ipynb
experiments/html/: index.html  styles.css
experiments/panda3d/: cubes.py
experiments/tkinter/: e.ipynb  e1.py  e2.py  e3.py  e4.py
pythonparts/geometry/: block.py
scripts/: __init__.py  config.py  exceptions.py  utils.py
scripts/geometry/: __init__.py  block.py  concrete_cover.py  coords.py  cuboid.py  scene.py  space.py
scripts/utils/: point.py
src/: __init__.py  config.py  exceptions.py  utils.py
src/geometry/: __init__.py  block.py  concrete_cover.py  coords.py  cuboid.py  scene.py  space.py  space_state.py
src/handles/: Handle.py  __init__.py
src/properties/: __init__.py
src/public/: __init__.py  interface.py  interface.pyi  tools.py
src/reinforcement/: __init__.py  longbar.py  reinforcement.py  stirrup.py
tests/: __init__.py  conftest.py  test_coords.py  test_geometry.py  test_handles.py  test_imports.py  test_interface.py  test_other.py  test_reinforcement.py  test_space.py  utils.py
(+24 files in other folders)
