[build-system]
requires = ['setuptools',
            'wheel',]

[project]
name = "pythonparts"
version = "0.1.1"
authors = [
  { name="Yaroslav Oliinyk", email="yaroliinyk@gmail.com" },
]
description = "Pythonparts is a Python library Allplan Python API that offers a simple interface to build exciting PythonPart scripts for Allplan"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yaroslavoliinyk/pythonparts"
